--- a/README.org
+++ b/README.org
@@ -35,10 +35,10 @@ For example:
 #+BEGIN_SRC cpp
 
 #include <Arduino.h>
-#include <TMC2209.h>
+#include <TMC2209X.h>
 
 // Instantiate TMC2209
-TMC2209 stepper_driver;
+TMC2209Stepper stepper_driver;
 HardwareSerial & serial_stream = Serial1;
 
 void setup()
